--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:theme="@style/Theme.MyFirstAppKotlin"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".controller.SecondActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,5 +26,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
