Create RecycleView for showing list of plants

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,5 @@ dependencyResolutionManagement {
 }
 
 rootProject.name = "MyFirstAppKotlin"
-include ':app'
+include ':activityresultlauncherexample'
+include ':recycleviewexample'
