--- a/recycleviewexample/src/main/AndroidManifest.xml
+++ b/recycleviewexample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bignerdranch.android.recycleviewexample">
+    package="com.bignerdranch.android.recycleviewexample" >
 
     <application
         android:allowBackup="true"
@@ -8,11 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyFirstAppKotlin">
-
+        android:theme="@style/Theme.MyFirstAppKotlin" >
         <activity
-            android:name=".controller.MainActivity"
-            android:exported="true">
+            android:name=".controller.PlantActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.PlantBookActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
