--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ dependencyResolutionManagement {
 rootProject.name = "MyFirstAppKotlin"
 include ':activityresultlauncherexample'
 include ':recycleviewexample'
+include ':toolbarexample'
