Create bottom navigator view with for items

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ rootProject.name = "MyFirstAppKotlin"
 include ':activityresultlauncherexample'
 include ':recycleviewexample'
 include ':toolbarexample'
+include ':bottomnavigationviewexample'
