Create Navigate View with two categories and titles inside, also add header to this navigate view

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':activityresultlauncherexample'
 include ':recycleviewexample'
 include ':toolbarexample'
 include ':bottomnavigationviewexample'
+include ':navigationviewexample'
