Create app with fragment

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include ':recycleviewexample'
 include ':toolbarexample'
 include ':bottomnavigationviewexample'
 include ':navigationviewexample'
+include ':fragmentexample'
+include ':cristalball'
