--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':bottomnavigationviewexample'
 include ':navigationviewexample'
 include ':fragmentexample'
 include ':cristalball'
+include ':sqliteexample'
