--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':navigationviewexample'
 include ':fragmentexample'
 include ':cristalball'
 include ':sqliteexample'
+include ':notebookexample'
