--- a/firebasechat/src/main/AndroidManifest.xml
+++ b/firebasechat/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirstAppKotlin">
         <activity
-            android:name=".SignInActivity"
+            android:name=".controller.SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".controller.MainActivity" />
     </application>
 </manifest>
