Create Navigation drawer Activity using Navigation View template

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':cristalball'
 include ':sqliteexample'
 include ':notebookexample'
 include ':firebasechat'
+include ':navigationviewmenu'
